Form alignment issues fixed

--- a/src/components/Customers.css
+++ b/src/components/Customers.css
@@ -1,12 +1,19 @@
 
-h1 {
+.Vid h1 {
     text-align: center;
-    margin-top: 250px;
+    margin-top: 20px;
     font-size: 24px;
     color: #333;
   }
   
-  form {
+  .Vid h2 {
+    text-align: center;
+    margin-top: 250px;
+    font-size: 34px;
+    color: #333;
+    
+  }
+  .Vid form {
     width: 350px;
     height: 550px;
     background: #ffffff;
@@ -25,7 +32,7 @@ h1 {
     display: block;
     font-size: 14px;
     margin-bottom: 5px;
-    color: #555;
+    color: #615757;
   }
   
   form input,
@@ -52,5 +59,9 @@ h1 {
   
   form button:hover {
     background-color: rgb(184, 35, 55);
+  }
+  .Vid {
+    padding-bottom: 200px;
+    padding-top: 200px;
   }
   
