--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -15,10 +15,10 @@ body {
     justify-content: center;
     width: 100%;
     max-width: 400px;
-    padding: 40px;
     background-color: #f9f9f9;
     border: 10px solid #ddd;
     border-radius: 20px;
+    height: 280px;
   }
   .form-container h2 {
     color: #219022; /* Change color to distinguish */
